[tool.poetry]
name = "jubeatools"
version = "0.1.0"
description = ""
authors = ["Stepland <16676308+Stepland@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
multidict = "^4.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
