[tool.poetry]
name = "jubeatools"
version = "0.1.0"
description = ""
authors = ["Stepland <16676308+Stepland@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
multidict = "^4.7.6"
click = "^7.1.2"
path = "^14.0.1"
simplejson = "^3.17.0"
marshmallow = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.17.0"
black = "^19.10b0"

[tool.poetry.scripts]
jubeatools = 'jubeatools.cli:convert'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
