[tool.poetry]
name = "jubeatools"
version = "1.2.3"
description = "A toolbox for jubeat file formats"
authors = ["Stepland <16676308+Stepland@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Stepland/jubeatools"

[tool.poetry.dependencies]
python = "^3.8"
multidict = "^5.1.0"
click = "^8.0.3"
path = "^15.1.2"
simplejson = "^3.17.0"
marshmallow = "^3.6.0"
parsimonious = "^0.8.1"
more-itertools = "^8.4.0"
sortedcontainers = "^2.3.0"
python-constraint = "^1.4.0"
construct = "~=2.10"
construct-typing = "^0.4.2"
marshmallow-dataclass = {extras = ["union", "enum"], version = "^8.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
rope = "^0.17.0"
black = "^21.4b2"
hypothesis = "^6.23.4"
mypy = "^0.910"
isort = "^4.3.21"
toml = "^0.10.2"
flake8 = "^3.9.1"
autoimport = "^0.7.0"
types-simplejson = "^3.17.1"

[tool.poetry.scripts]
jubeatools = 'jubeatools.cli.cli:convert'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
